--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="wasm-rust"/>
+    <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="wasm-trunk-vanilla"/>
 </body>
 </html>
